# u-boot-MT7621_2

./: .config  .config.old  .gitignore  CMakeLists.txt  Makefile  README  autoconf.h  config.in
BCH/: .Readme.swp
board/rt2880/: rt2880.c
common/: cmd_bootm.c  cmd_tftpServer.c  env_common.c  environment.c  flash.c  usb_storage.c
drivers/: Makefile  nand_flash.c  spi_flash.c  spi_rt6855A_flash.c
drivers/nand/: mtk_nand.c  mtk_nand.h  nand_device_list.h
httpd/: Makefile  fs.c  httpd.c
include/: common.h
include/configs/: rt2880.h
lib_mips/: board.c  board.h
net/: httpd.c  httpd.h  net.c
tools/: mkimage
